# SSNanopore_rag

./: .gitignore  .pre-commit-config.yaml  README.md  dataLoader.py  docker-compose.yaml  embeddings.py  main.py  pyproject.toml
src/: dataLoader.py
src/ssnanopore_rag/: __init__.py  dataLoader.py  embeddingStore.py  embeddings.py  localLLM.py  main.py  prepare.py  run.py  tools.py
src/ssnanopore_rag/components/: dataLoader.py  embeddingStore.py  embeddings.py  localLLM.py
src/ssnanopore_rag/misc/: logging_setup.py
