[project]
name = "ssnanopore-rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "adapters>=1.3.0",
    "dotenv>=0.9.9",
    "google-genai>=2.6.0",
    "hf-xet>=1.5.0",
    "pydantic>=2.13.4",
    "rispy>=0.10.0",
    "torch>=2.12.0",
    "torchvision>=0.27.0",
    "tqdm>=4.67.3",
]

[[tool.uv.index]]
name = "pytorch-cu130"
url = "https://download.pytorch.org/whl/cu130"
explicit = true

[tool.uv.sources]
torch = [
  { index = "pytorch-cu130" },
]
torchvision = [
  { index = "pytorch-cu130" },
]
