[project]
name = "ssnanopore-rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "adapters>=1.3.0",
    "chromadb>=1.5.9",
    "dotenv>=0.9.9",
    "google-genai>=2.6.0",
    "hf-xet>=1.5.0",
    "pinecone[grpc]>=9.0.1",
    "pydantic>=2.13.4",
    "qdrant-client[fastembed]>=1.18.0",
    "rispy>=0.10.0",
    "snowballstemmer>=3.1.0",
    "torch>=2.12.0",
    "torchvision>=0.27.0",
    "tqdm>=4.67.3",
]

[project.scripts]
main = "ssnanopore_rag.main:main"
check = "ssnanopore_rag.embeddingStore:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ssnanopore_rag"]

[[tool.uv.index]]
name = "pytorch-cu130"
url = "https://download.pytorch.org/whl/cu130"
explicit = true

[tool.uv.sources]
torch = [
  { index = "pytorch-cu130" },
]
torchvision = [
  { index = "pytorch-cu130" },
]
