[project]
name = "ssnanopore-rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "adapters>=1.3.0",
    "chromadb>=1.5.9",
    "dotenv>=0.9.9",
    "google-genai>=2.6.0",
    "hf-xet>=1.5.0",
    "ollama>=0.6.2",
    "pinecone[grpc]>=9.0.1",
    "pydantic>=2.13.4",
    "qdrant-client[fastembed]>=1.18.0",
    "rispy>=0.10.0",
    "snowballstemmer>=3.1.0",
    "torch>=2.12.0",
    "torchvision>=0.27.0",
    "tqdm>=4.67.3",
]

[project.scripts]
main = "ssnanopore_rag.main:main"
check = "ssnanopore_rag.embeddingStore:main"
check2 = "ssnanopore_rag.localLLM:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ssnanopore_rag"]

[[tool.uv.index]]
name = "pytorch-cu130"
url = "https://download.pytorch.org/whl/cu130"
explicit = true

[tool.uv.sources]
torch = [
  { index = "pytorch-cu130" },
]
torchvision = [
  { index = "pytorch-cu130" },
]

[dependency-groups]
dev = [
    "black>=26.5.1",
    "pre-commit>=4.6.0",
    "ruff>=0.15.20",
]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "I",   # isort (import sorting)
    "UP",  # pyupgrade (modernize syntax)
    "B",   # bugbear (likely bugs)
    "SIM", # simplify
]
ignore = ["E501"]   # line length, formatter handles it

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
